Fix: letter spacing in `.form-group .form-help`.

--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -930,7 +930,7 @@ textarea:focus {
 .form-group .form-help {
     margin: 0;
     line-height: 1.3;
-    letter-spacing: 0.19rem;
+    letter-spacing: .019rem;
     color: var(--color-dark-grey);
     font-size: var(--font-size-small);
     max-height: 0;
